--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
                 </div>
-
+<img src="img/lossy-page1-640px-Os_Mutantes.tif (1).png" alt="A imagem apresenta o grupo musical Os Mutantes. São três pessoas cantando em dois microfones" title="Os Mutantes - CC0 Dominio Público /-Acervo Arquivo Nacional" class="img-fluid ima-inicio">
             </div>
         </section>
 
@@ -66,7 +66,10 @@
                     </div>
                     <div class="col-md-4">
                         <img src="img/lossy-page1-640px-Os_Mutantes_2.tif.jpg" class="img-fluid rounded-5"
-                            loading="lazy">
+    	
+Initial commit
+last week
+                        loading="lazy">
                     </div>
                 </div>
             </div>
@@ -112,4 +115,6 @@
 
 </body>
 
-</html>
+</html>	
+Initial commit
+last week
