--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
-            </ul>          
+            </ul>  
+             
+            <div id="acessibilidade">
+                <button id="aumentar fonte" class="btn btn-primary fw-bold">A+</button>
+                <button id="diminuir fonte" class="btn btn-primary fw-bold">A-</button>
+            </div> 
         </nav>
        
     </header>
@@ -111,6 +116,7 @@ last week
         <i class="bi bi-tiktok"></i>
         <p class="mt-3">Desenvolvido por Start by Alura. Projeto fictício sem fins comerciais.</p>
     </footer>
+
     <script src="script.js"></script>
 
 </body>
@@ -118,3 +124,5 @@ last week
 </html>	
 Initial commit
 last week
+
+<body>
