--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ last week
                 <div class="col-md-8 col-lg-10 rounded-5 formulario"> <!-- Caixa do formulário com 60% de largura -->
                     <h2 class="mb-3">Entre em contato</h2>
                     <form>
-                        <div class="form-group mb-3">
+                        <div class="form-group <script src=""mb-3">
                             <label for="nome">Nome</label>
                             <input type="text" id="nome" name="nome" class="form-control rounded-3 mt-1"
                                 placeholder="Digite seu nome completo">
